--- a/index.html
+++ b/index.html
@@ -6,24 +6,111 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
     <title>Fingarant_plus</title>
 </head>
 <body>
 <header class="header" id="header">
- <div class="container">
-fhh
- </div>
+    <div class="container">
+        <div class="header-logo">
+            gggg
+        </div>
+    </div>
 </header>
 
 <main class="main" id="main">
-
+    <section class="one">
+        <div class="container">
+            <div class="main-logo">
+                <h1>Получите банковскую гарантию<br>со<span class="yellow"> 100% одобрением</span><br>за 24 часа</h1>
+                <p class="text">Поможем оформить банковскую гарантию по 44-ФЗ, 223-ФЗ и<br>коммерческому контракту за 1
+                    день.Сумма от
+                    1000 руб.<br>Стоимость от 1.3% годовых.</p>
+                <button>Получить предложение</button>
+                <p class="text_">Предварительное решение<br>в течение 60 минут</p>
+            </div>
+        </div>
+    </section>
+    <section class="two">
+        <div class="container">
+            <div class="advantages">
+                <h2>Наши преимущества</h2>
+                <div class="advantages-grid">
+                    <div class="advantage">
+                        <img src="images/Group.png" alt="иконка">
+                        <p>Только белые банковские<br>гарантии. В числе наших<br>партнеров только банки,<br>входящие в
+                            официальный<br>перечень МинФина РФ.<br>Гарантия подлинная - проходит<br>любые проверки
+                        </p>
+                    </div>
+                    <div class="advantage">
+                        <img src="images/Frame.png" alt="иконка">
+                        <p>Работаем с любыми формами организаций: ИП, ООО, АО, ЗАО.</p>
+                    </div>
+                    <div class="advantage">
+                        <img src="images/Group%20(1).png" alt="иконка">
+                        <p>Помогаем подготовить документы для подачи в банковские учреждения.</p>
+                    </div>
+                    <div class="advantage">
+                        <img src="images/Group%20(2).png" alt="иконка">
+                        <p>Поможем получить гарантию без залога и поручительства.</p>
+                    </div>
+                    <div class="advantage">
+                        <img src="images/Group%20(3).png" alt="иконка">
+                        <p>Проводим тщательный анализ финансового состояния клиента, что помогает точечно выбирать банк
+                            с максимальной вероятностью одобрения</p>
+                    </div>
+                    <div class="advantage">
+                        <img src="images/Group%20(4).png" alt="иконка">
+                        <p>Возможность одобрения банковской гарантии до публикации протокола победителя.</p>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="three">
+        <div class="container">
+            <div class="our_services">
+                <h3>Наши услуги</h3>
+                <div class="service-grid">
+                    <div class="service">
+                        <div class="service-text">
+                            <p>БАНКОВСКАЯ ГАРАНТИЯ НА УЧАСТИЕ В ЗАКУПКЕ</p>
+                        </div>
+                        <p>44-ФЗ, 223-ФЗ, 185-ФЗ/615-П.
+                            Коммерческие закупки.
+                            Сумма до 1200 млн. руб.
+                            Ставка от 1,85% .
+                            Срок до 36 мес.</p>
+                        <button class="recognize">Узнать подробнее</button>
+                        <button class="get">Получить предложение</button>
+                    </div>
+                    <div class="service"></div>
+                    <div class="service"></div>
+                    <div class="service"></div>
+                    <div class="service"></div>
+                    <div class="service"></div>
+                    <div class="service"></div>
+                    <div class="service"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <footer class="footer" id="footer">
 
 </footer>
-
 
 
 </body>
