--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <button class="recognize">Узнать подробнее</button>
                         <button class="get">Получить предложение</button>
                     </div>
-                    <div class="service"></div>
+                    <div class="service">f</div>
                     <div class="service"></div>
                     <div class="service"></div>
                     <div class="service"></div>
