--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="two">
         <div class="container">
             <div class="advantages">
-                <h2>Наши преимущества</h2>
+                <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
                 <div class="advantages-grid">
                     <div class="advantage">
                         <img src="images/Group.png" alt="иконка">
@@ -72,31 +72,108 @@
     <section class="three">
         <div class="container">
             <div class="our_services">
-                <h3>Наши услуги</h3>
+                <h3>НАШИ УСЛУГИ</h3>
                 <div class="service-grid">
                     <div class="service">
                         <div class="service-text">
                             <p>БАНКОВСКАЯ ГАРАНТИЯ НА УЧАСТИЕ В ЗАКУПКЕ</p>
                         </div>
-                        <p>44-ФЗ, 223-ФЗ, 185-ФЗ/615-П.
-                            Коммерческие закупки.
-                            Сумма до 1200 млн. руб.
-                            Ставка от 1,85% .
-                            Срок до 36 мес.</p>
+                        <div class="service-text-one">
+                            44-ФЗ, 223-ФЗ, 185-ФЗ/615-П.<br>Коммерческие закупки.<br>Сумма до 1200 млн. руб.<br>Ставка
+                            от 1,85% .<br>Срок до 36 мес.
+                        </div>
                         <button class="recognize">Узнать подробнее</button>
                         <button class="get">Получить предложение</button>
                     </div>
-                    <div class="service">f</div>
-                    <div class="service"></div>
-                    <div class="service"></div>
-                    <div class="service"></div>
-                    <div class="service"></div>
-                    <div class="service"></div>
-                    <div class="service"></div>
+                    <div class="service">
+                        <div class="service-text">
+                            <p>БАНКОВСКАЯ ГАРАНТИЯ НА ИСПОЛНЕНИЕ КОНТРАКТА</p>
+                        </div>
+                        <div class="service-text-one">
+                            44-ФЗ, 223-ФЗ, 185-ФЗ/615-П.<br>Коммерческие закупки.<br>Сумма до 1200 млн. руб.<br>Ставка
+                            от 1,85% .<br>Срок до 36 мес.
+                        </div>
+                        <button class="recognize">Узнать подробнее</button>
+                        <button class="get">Получить предложение</button>
+                    </div>
+                    <div class="service">
+                        <div class="service-text">
+                            <p>БАНКОВСКАЯ ГАРАНТИЯ НА ВОЗВРАТ АВАНСА</p>
+                        </div>
+                        <div class="service-text-one">
+                            44-ФЗ, 223-ФЗ, 185-ФЗ/615-П.<br>Коммерческие закупки.<br>Сумма до 1200 млн. руб.<br>Ставка
+                            от 2,10% .<br>Срок до 11 лет.
+                        </div>
+                        <button class="recognize">Узнать подробнее</button>
+                        <button class="get">Получить предложение</button>
+                    </div>
+                    <div class="service">
+                        <div class="service-text">
+                            <p>БАНКОВСКАЯ ГАРАНТИЯ НА ГАРАНТ-Е ОБЯЗАТЕЛЬСТВА</p>
+                        </div>
+                        <div class="service-text-one">
+                            44-ФЗ, 223-ФЗ, 185-ФЗ/615-П.<br>Коммерческие закупки.<br>Сумма до 1200 млн. руб.<br>Ставка
+                            от 1,85% .<br>Срок до 36 мес.
+                        </div>
+                        <button class="recognize">Узнать подробнее</button>
+                        <button class="get">Получить предложение</button>
+                    </div>
+                    <div class="service">
+                        <div class="service-text">
+                            <p>БАНКОВСКАЯ ГАРАНТИЯ НА КОММЕРЧЕСКИЙ КОНТРАКТ</p>
+                        </div>
+                        <div class="service-text-one">
+                            Сумма до 1200 млн. руб.<br>Ставка от 1,85% .<br>Срок до 6 лет
+                        </div>
+                        <button class="recognize">Узнать подробнее</button>
+                        <button class="get">Получить предложение</button>
+                    </div>
+                    <div class="service">
+                        <div class="service-text">
+                            <p>ТЕНДЕРНЫЙ ЗАЙМ (ТЕНДЕРНОЕ КРЕДИТОВАНИЕ)</p>
+                        </div>
+                        <div class="service-text-one">
+                            Сумма до 600 млн. руб.<br>Ставка от 2,00% .<br>Срок до 12 мес.
+                        </div>
+                        <button class="recognize">Узнать подробнее</button>
+                        <button class="get">Получить предложение</button>
+                    </div>
+                    <div class="service">
+                        <div class="service-text">
+                            <p>КРЕДИТ НА ИСПОЛНЕНИЕ КОНТРАКТА</p>
+                        </div>
+                        <div class="service-text-one">
+                            Сумма до 600 млн. руб.<br>Ставка от 10,0% .<br>Срок до 60 мес.
+                        </div>
+                        <button class="recognize">Узнать подробнее</button>
+                        <button class="get">Получить предложение</button>
+                    </div>
+                    <div class="service">
+                        <div class="service-text">
+                            <p>КРЕДИТ НА ПОПОЛНЕНИЕ ОБОРОТНЫХ СРЕДСТВ</p>
+                        </div>
+                        <div class="service-text-one">
+                            Сумма до 600 млн. руб.<br>Ставка от 10,0% .<br>Срок до 60 мес.
+                        </div>
+                        <button class="recognize">Узнать подробнее</button>
+                        <button class="get">Получить предложение</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <section class="four">
+        <div class="container">
+            <div class="safeguards">
+                <h3>БЫСТРЫЙ ПОДБОР БАНКОВСКОЙ ГАРАНТИИ</h3>
+                <div class="safeguards-grid">
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </main>
 <br>
 <br>
