--- a/index.html
+++ b/index.html
@@ -166,9 +166,57 @@
         <div class="container">
             <div class="safeguards">
                 <h3>БЫСТРЫЙ ПОДБОР БАНКОВСКОЙ ГАРАНТИИ</h3>
-                <div class="safeguards-grid">
+                <form action="" class="safeguards-grid">
+                    <div class="safeguards-law">
+                        <p>Вид федерального закона:</p>
+                        <div class="input-radio-one">
+                            <div class="radio-option"><input type="radio" class="radio">
+                                <label> 44-ФЗ</label></div>
+                            <div class="radio-option"><input type="radio" class="radio">
+                                <label>223-ФЗ</label></div>
+                            <div class="radio-option"><input type="radio" class="radio">
+                                <label>185-ФЗ (615-ПП)</label></div>
+                        </div>
+                        <div class="radio-option"><input type="radio" class="radio">
+                            <label>Коммерческий контракт</label></div>
+                        <p class="p">Тип обеспечения:</p>
+                        <div class="radio-option"><input type="radio" class="radio">
+                            <label>Обеспечение заявки на участие</label></div>
+                        <div class="radio-option"><input type="radio" class="radio">
+                            <label>Обеспечение исполнения контракта</label></div>
+                        <div class="radio-option"><input type="radio" class="radio">
+                            <label>Обеспечение гарантийных обязательств</label></div>
+                        <div class="radio-option"><input type="radio" class="radio">
+                            <label>Возврат авансового платежа</label></div>
+                    </div>
+                    <div class="safeguards-amount">
+                        <div class="input-text">
+                            <label>Сумма банковской гарантии:</label>
+                            <input type="text" placeholder="до 1200 млн. рублей">
+                        </div>
+                        <div class="input-text">
+                            <label>Срок гарантии:</label>
+                            <input type="text" placeholder="до 3700 дней">
+                        </div>
+                        <div class="input-text"><label>Имя:</label>
+                            <input type="text" placeholder="Введите имя"></div>
+                        <div class="input-text">
+                            <label>Телефон:</label>
+                            <input type="tel" placeholder="Введите телефон">
+                        </div>
+                        <button class="submit-btn">РАССЧИТАТЬ СТОИМОСТЬ</button>
+                        <div class="policy">
+                            <label>
+                                <input type="checkbox" required checked>
+                                Нажимая на кнопку, я соглашаюсь с условиями<br>
+                                Политики конфиденциальности и обработки<br> персональных данных.
+                            </label>
+                            <div class="note">
+                                В течение 1 часа мы подберем самое выгодное предложение из нашего списка 60 банков-партнёров
+                            </div>
+                    </div>
 
-                </div>
+                </form>
             </div>
         </div>
     </section>
