--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="container">
             <div class="safeguards">
                 <h3>БЫСТРЫЙ ПОДБОР БАНКОВСКОЙ ГАРАНТИИ</h3>
-                <form action="" class="safeguards-grid">
+                <div class="safeguards-grid">
                     <div class="safeguards-law">
                         <p>Вид федерального закона:</p>
                         <div class="input-radio-one">
@@ -216,7 +216,7 @@
                             </div>
                     </div>
 
-                </form>
+                </div>
             </div>
         </div>
     </section>
